fix: Developer console cutting off top of calculator

--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,17 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
 #calculator {
   width: 40%;
   aspect-ratio: 1 / 1;
   background-color: slategray;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   border-radius: 2%;
   padding: 2%;
   font-size: 3vw;
